FEAT: Passing query parameter
