# public/openapi.json
@@ -157,6 +157,42 @@
               "type": "string",
               "example": "Sheet 1"
             }
+          },
+          {
+            "name": "offset",
+            "in": "query",
+            "description": "Pagination offset",
+            "required": false,
+            "schema": {
+              "type": "integer",
+              "format": "int32",
+              "default": 2,
+              "example": 2
+            }
+          },
+          {
+            "name": "per_page",
+            "in": "query",
+            "description": "Pagination page size",
+            "required": false,
+            "schema": {
+              "type": "integer",
+              "format": "int32",
+              "default": 100,
+              "example": 100
+            }
+          },
+          {
+            "name": "column_count",
+            "in": "query",
+            "description": "Maximum column number",
+            "required": false,
+            "schema": {
+              "type": "integer",
+              "format": "int32",
+              "default": 10,
+              "example": 10
+            }
           }
         ],
         "responses": {
